Update the docs for the instant launch endpoints
