# docs/swagger.json
@@ -2,7 +2,7 @@
   "swagger": "2.0",
   "info": {},
   "paths": {
-    "/instantlaunches/default": {
+    "/instantlaunches/mappings/defaults": {
       "get": {
         "produces": [
           "application/json"
@@ -25,7 +25,7 @@
         }
       }
     },
-    "/instantlaunches/default/latest": {
+    "/instantlaunches/mappings/defaults/latest": {
       "get": {
         "produces": [
           "application/json"
@@ -46,9 +46,75 @@
             "$ref": "#/responses/errorResponse"
           }
         }
+      },
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Adds a new latest defaults mapping.",
+        "operationId": "addLatestDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Updates the latest defaults mapping.",
+        "operationId": "updateLatestDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "delete": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Deletes the latest defaults mapping.",
+        "operationId": "deleteLatestDefaults",
+        "responses": {
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
       }
     },
-    "/instantlaunches/default/{version}": {
+    "/instantlaunches/mappings/defaults/{version}": {
       "get": {
         "produces": [
           "application/json"
@@ -79,50 +145,293 @@
             "$ref": "#/responses/errorResponse"
           }
         }
+      },
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Updates the default instant launch mapping at the specified version.",
+        "operationId": "updateDefaultsByVersion",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "delete": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Deletes the default instant launch mapping at the specified version.",
+        "operationId": "deleteDefaultsByVersion",
+        "responses": {
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/instantlaunches/mappings/{username}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Lists the user-specific mappings of files to instant launches regardless of version.",
+        "operationId": "getAllUserDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/listAllDefaults"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/instantlaunches/mappings/{username}/latest": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Gets the latest user-specific instant launch mapping.",
+        "operationId": "getUserDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "put": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Adds a new user-specific defaults mapping.",
+        "operationId": "addUserDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Updates the latest user-specific defaults mapping.",
+        "operationId": "updateUserDefaults",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "delete": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Deletes the user-specific instant launch mapping.",
+        "operationId": "deleteUserDefaults",
+        "responses": {
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      }
+    },
+    "/instantlaunches/mappings/{username}/{version}": {
+      "get": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Gets the latest user-specific instant launch mapping by version.",
+        "operationId": "getUserDefaultsByVersion",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "post": {
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Updates a user-specific defaults mapping by version.",
+        "operationId": "updateUserDefaultsByVersion",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/defaultMapping"
+          },
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
+      },
+      "delete": {
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http"
+        ],
+        "tags": [
+          "instantlaunches"
+        ],
+        "summary": "Deletes a user-specific instant launch mapping at the specified version.",
+        "operationId": "deleteUSerDefaultsByVersion",
+        "responses": {
+          "default": {
+            "$ref": "#/responses/errorResponse"
+          }
+        }
       }
     }
   },
   "definitions": {
-    "DefaultInstantLaunchMapping": {
+    "DB": {
+      "description": "used mostly to automatically bind named queries using the right bindvars.",
       "type": "object",
-      "title": "A DefaultInstantLaunchMapping is a global default mapping of files to instant launches.",
+      "title": "DB is a wrapper around sql.DB which keeps track of the driverName upon Open,",
+      "properties": {
+        "Mapper": {
+          "$ref": "#/definitions/Mapper"
+        }
+      },
+      "x-go-package": "github.com/jmoiron/sqlx"
+    },
+    "DefaultInstantLaunchMapping": {
+      "description": "A global default mapping of files to instant launches.",
+      "type": "object",
+      "title": "DefaultInstantLaunchMapping docs",
       "required": [
-        "ID",
-        "Version",
-        "Mapping"
+        "id",
+        "version",
+        "mapping"
       ],
       "properties": {
-        "ID": {
+        "id": {
           "description": "Unique identifier.",
-          "type": "string"
+          "type": "string",
+          "x-go-name": "ID"
         },
-        "Mapping": {
+        "mapping": {
           "$ref": "#/definitions/InstantLaunchMapping"
         },
-        "Version": {
+        "version": {
           "description": "The version of the mapping format.",
-          "type": "string"
+          "type": "string",
+          "x-go-name": "Version"
         }
       },
       "x-go-package": "github.com/cyverse-de/app-exposer/instantlaunches"
     },
     "InstantLaunch": {
+      "description": "The information needed to instantly launch an app.",
       "type": "object",
-      "title": "InstantLaunch contains the information needed to instantly launch an app.",
+      "title": "InstantLaunch docs",
+      "required": [
+        "quick_launch_id",
+        "added_by",
+        "added_on"
+      ],
       "properties": {
         "added_by": {
+          "description": "The username of the user that added or is adding the instant launch.",
           "type": "string",
           "x-go-name": "AddedBy"
         },
         "added_on": {
+          "description": "The date the instant launch was added to the system.",
           "type": "string",
           "x-go-name": "AddedOn"
         },
         "id": {
+          "description": "Unique identifier",
           "type": "string",
           "x-go-name": "ID"
         },
         "quick_launch_id": {
+          "description": "The UUID for the quick launch used in the instant launch.",
           "type": "string",
           "x-go-name": "QuickLaunchID"
         }
@@ -141,40 +450,48 @@
       "description": "InstantLaunchSelector defines the default and compatible instant launches\nfor a file pattern.",
       "type": "object",
       "properties": {
-        "Compatible": {
+        "compatible": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/InstantLaunch"
-          }
+          },
+          "x-go-name": "Compatible"
         },
-        "Default": {
+        "default": {
           "$ref": "#/definitions/InstantLaunch"
         },
-        "Kind": {
-          "type": "string"
+        "kind": {
+          "type": "string",
+          "x-go-name": "Kind"
         },
-        "Pattern": {
-          "type": "string"
+        "pattern": {
+          "type": "string",
+          "x-go-name": "Pattern"
         }
       },
       "x-go-package": "github.com/cyverse-de/app-exposer/instantlaunches"
+    },
+    "Mapper": {
+      "description": "Mapper is a general purpose mapper of names to struct fields.  A Mapper\nbehaves like most marshallers in the standard library, obeying a field tag\nfor name mapping but also providing a basic transform function.",
+      "type": "object",
+      "x-go-package": "github.com/jmoiron/sqlx/reflectx"
     }
   },
   "responses": {
     "defaultMapping": {
-      "description": "A DefaultInstantLaunchMapping is a global default mapping of files to instant launches.",
+      "description": "DefaultInstantLaunchMapping docs\n\nA global default mapping of files to instant launches.",
       "schema": {
         "$ref": "#/definitions/InstantLaunchMapping"
       },
       "headers": {
-        "ID": {
+        "id": {
           "type": "string",
           "description": "Unique identifier.\n\nRequired: true"
         },
-        "Mapping": {
+        "mapping": {
           "description": "The mapping from files to instant launches.\n\nRequired: true"
         },
-        "Version": {
+        "version": {
           "type": "string",
           "description": "The version of the mapping format.\n\nRequired: true"
         }
@@ -195,6 +512,31 @@
         },
         "message": {
           "type": "string"
+        }
+      }
+    },
+    "instantLaunch": {
+      "description": "InstantLaunch docs\n\nThe information needed to instantly launch an app.",
+      "schema": {
+        "$ref": "#/definitions/DB"
+      },
+      "headers": {
+        "added_by": {
+          "type": "string",
+          "description": "The username of the user that added or is adding the instant launch.\n\nRequired: true"
+        },
+        "added_on": {
+          "type": "string",
+          "description": "The date the instant launch was added to the system.\n\nRequired: true"
+        },
+        "db": {},
+        "id": {
+          "type": "string",
+          "description": "Unique identifier\n\nRequired: false"
+        },
+        "quick_launch_id": {
+          "type": "string",
+          "description": "The UUID for the quick launch used in the instant launch.\n\nRequired: true"
         }
       }
     },
